# njdoe

./: .pdm.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
tests/: test_njdoe.py
